--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -4,8 +4,11 @@
   padding-left: 1rem;
   padding-right: 1rem;
   border-radius: 0.25rem;
-  border: 1px solid inherit;
+  border: 1px solid;
+  border-color: inherit;
   background-color: #fafafa;
+  margin-right: 1rem;
+  margin-left: 1rem;
 }
 
 .small {
